<resources>
    <string name="app_name">fw</string>
    <string name="query">query</string>
    <string name="ui">UI++</string>
    <string name="accessibility">acs</string>
    <string name="activity">activity</string>
    <string name="shell">shell</string>
    <string name="key">press</string>
    <string name="input">input</string>
    <string name="ifelse">if</string>
    <string name="check_point">check</string>
    <string name="caseid">用例id</string>
    <string name="edit">编辑</string>
    <string name="action">执行</string>
    <string name="cropper">剪裁</string>
    <string name="add">添加</string>
</resources>
